# cox

./: CMakeLists.txt  LICENSE  README.md  build.sh
docs/: CMakeLists.txt  Design proposal.adoc  cgroup.adoc  event_io.adoc  sys_timerfd.adoc
examples/: CMakeLists.txt
examples/benchmark/: CMakeLists.txt  reactor_benchmark.cpp
examples/echo/: CMakeLists.txt  echo_main.cpp  main.cc
examples/timer/: CMakeLists.txt  echo_main.cc  echo_timer.cxx  main.cxx
framework/: CMakeLists.txt
framework/backoff/: CMakeLists.txt
framework/buffer/: CMakeLists.txt  READ.md
framework/net/: CMakeLists.txt
framework/network/: CMakeLists.txt
framework/poller/: CMakeLists.txt  Channel.cxx  Channel.h  DefaultPoller.cxx  EpollPoller.cxx  EpollPoller.h  Poller.cxx  Poller.h
framework/reactor/: CMakeLists.txt  Reactor.cxx  Reactor.h
logging/: CMakeLists.txt  default_formatter.cc  formatter.cc  formatter.h  json_formatter.cc  json_formatter.h  logger.cc  logger.h  timestamp.cc  timestamp.h
reactor/: CMakeLists.txt  event_loop.cc  event_loop.cpp  event_loop.cxx  event_loop.h  io_channel.cc  io_channel.cpp  io_channel.h  io_event.h
reactor/poller/: epoll_poller.cpp  epoll_poller.h  io_poller.h  io_poller_factory.cpp  io_poller_factory.h  kqueue_poller.cc  kqueue_poller.h
resourceMonitor/: CMakeLists.txt
tests/: CMakeLists.txt  event_loop_test.cc  event_loop_test.cxx
utilities/: CMakeLists.txt
utilities/file/: file_opts.cc  file_opts.h
utilities/thread/: current_thread.cc  current_thread.cxx  current_thread.h  likely.h
